--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.1",
     "@astrojs/check": "^0.6.0",
+    "@astrojs/sitemap": "^3.1.4",
+    "astro": "^4.7.1",
+    "astro-seo-metadata": "^0.6.0",
+    "sharp": "^0.33.3",
     "typescript": "^5.4.5"
   }
 }
