--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@astrojs/check": "^0.6.0",
     "@astrojs/sitemap": "^3.1.4",
     "astro": "^4.7.1",
-    "astro-seo-metadata": "^0.6.0"
+    "astro-seo-metadata": "^0.6.0",
+    "marked": "^13.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
