--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
     "sharp": "^0.33.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
