--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.6.0",
     "@astrojs/sitemap": "^3.1.4",
+    "@yamada-ui/utils": "^1.3.0",
     "astro": "^4.7.1",
     "astro-seo-metadata": "^0.6.0",
     "marked": "^13.0.1"
