--- a/package.json
+++ b/package.json
@@ -3,27 +3,33 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "ts-node ./generate-css.mjs && astro dev",
+    "dev": "bun gen:css && astro dev",
     "start": "astro preview",
-    "build": "ts-node ./generate-css.mjs && astro check && astro build",
+    "build": "bun gen:css && astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --write .",
+    "gen:css": "bun src/utils/generate-css.ts"
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
     "@astrojs/sitemap": "^3.1.4",
+    "@astrojs/tailwind": "^5.1.0",
     "@playform/compress": "^0.0.13",
     "@yamada-ui/utils": "^1.3.0",
     "astro": "^4.7.1",
     "astro-purgecss": "^4.1.1",
     "astro-seo-metadata": "^0.6.0",
     "marked": "^13.0.1",
-    "purgecss": "^6.0.0"
+    "purgecss": "^6.0.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "sharp": "^0.33.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
