--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@playform/compress": "^0.0.13",
     "@yamada-ui/utils": "^1.3.0",
     "astro": "^4.7.1",
+    "astro-compressor": "^0.4.1",
     "astro-purgecss": "^4.1.1",
     "astro-seo-metadata": "^0.6.0",
     "marked": "^13.0.1",
