--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "sharp": "^0.33.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
